syntax = "proto3";

package quant.datafeed.v1;
option go_package = "github.com/austin/quantum/datafeed/internal/gen/datafeed/v1;datafeedv1";

import "buf/validate/validate.proto";
import "gnostic/openapi/v3/annotations.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/wrappers.proto";

service DatafeedService {
  rpc IngestTicks(IngestTicksRequest) returns (IngestTicksResponse);
  rpc ReplayTicks(ReplayTicksRequest) returns (ReplayTicksResponse);
  rpc QueryBars(QueryBarsRequest) returns (QueryBarsResponse);
  rpc ListNews(ListNewsRequest) returns (ListNewsResponse);
  rpc ListSocial(ListSocialRequest) returns (ListSocialResponse);

  rpc GetConfig(GetConfigRequest) returns (GetConfigResponse) {
    option (gnostic.openapi.v3.operation) = {
      operation_id: "DatafeedService_GetConfig"
      summary: "Get Datafeed Config"
      description: "Returns datafeed configuration in chart-library UDF format."
      tags: "UDF"
      tags: "Datafeed"
    };
  }

  rpc GetTime(GetTimeRequest) returns (GetTimeResponse) {
    option (gnostic.openapi.v3.operation) = {
      operation_id: "DatafeedService_GetTime"
      summary: "Get Server Time"
      description: "Returns current server time as UNIX seconds."
      tags: "UDF"
      tags: "Datafeed"
    };
  }

  rpc GetBars(GetBarsRequest) returns (GetBarsResponse) {
    option (gnostic.openapi.v3.operation) = {
      operation_id: "DatafeedService_GetBars"
      summary: "Get Bars"
      description: "Returns historical bars in chart datafeed API structure."
      tags: "Datafeed"
      tags: "Chart"
    };
  }

  rpc GetHistory(GetHistoryRequest) returns (GetHistoryResponse) {
    option (gnostic.openapi.v3.operation) = {
      operation_id: "DatafeedService_GetHistory"
      summary: "Get Historical Bars"
      description: "Returns historical OHLCV data in UDF history format."
      tags: "UDF"
      tags: "Datafeed"
    };
  }

  rpc GetQuotes(GetQuotesRequest) returns (GetQuotesResponse) {
    option (gnostic.openapi.v3.operation) = {
      operation_id: "DatafeedService_GetQuotes"
      summary: "Get Quotes"
      description: "Returns quote payload in UDF quotes format."
      tags: "UDF"
      tags: "Datafeed"
    };
  }

  rpc GetMarks(GetMarksRequest) returns (GetMarksResponse) {
    option (gnostic.openapi.v3.operation) = {
      operation_id: "DatafeedService_GetMarks"
      summary: "Get Marks"
      description: "Returns marks in UDF response-as-table format."
      tags: "UDF"
      tags: "Datafeed"
    };
  }

  rpc GetTimescaleMarks(GetTimescaleMarksRequest) returns (GetTimescaleMarksResponse) {
    option (gnostic.openapi.v3.operation) = {
      operation_id: "DatafeedService_GetTimescaleMarks"
      summary: "Get Timescale Marks"
      description: "Returns timescale marks in UDF format."
      tags: "UDF"
      tags: "Datafeed"
    };
  }

  rpc ResolveSymbol(ResolveSymbolRequest) returns (ResolveSymbolResponse) {
    option (gnostic.openapi.v3.operation) = {
      operation_id: "DatafeedService_ResolveSymbol"
      summary: "Resolve Symbol"
      description: "Resolves symbol metadata in common LibrarySymbolInfo format."
      tags: "UDF"
      tags: "Datafeed"
    };
  }

  rpc GetSymbolGroupInfo(GetSymbolGroupInfoRequest) returns (GetSymbolGroupInfoResponse) {
    option (gnostic.openapi.v3.operation) = {
      operation_id: "DatafeedService_GetSymbolGroupInfo"
      summary: "Get Symbol Group Info"
      description: "Returns symbol_info response-as-table payload."
      tags: "UDF"
      tags: "Datafeed"
    };
  }

  rpc SearchSymbols(SearchSymbolsRequest) returns (SearchSymbolsResponse) {
    option (gnostic.openapi.v3.operation) = {
      operation_id: "DatafeedService_SearchSymbols"
      summary: "Search Symbols"
      description: "Searches symbols using UDF search payload format."
      tags: "UDF"
      tags: "Datafeed"
    };
  }

  rpc StreamBars(StreamBarsRequest) returns (stream StreamBarsResponse) {
    option (gnostic.openapi.v3.operation) = {
      operation_id: "DatafeedService_StreamBars"
      summary: "Stream Bars"
      description: "Streams incremental bar updates in UDF stream format."
      tags: "UDF"
      tags: "Datafeed"
    };
  }

  rpc SubscribeBars(SubscribeBarsRequest) returns (stream SubscribeBarsResponse) {
    option (gnostic.openapi.v3.operation) = {
      operation_id: "DatafeedService_SubscribeBars"
      summary: "Subscribe Bars"
      description: "Streams realtime bar updates in chart datafeed API structure."
      tags: "Datafeed"
      tags: "Chart"
    };
  }

  rpc ListSymbols(ListSymbolsRequest) returns (ListSymbolsResponse) {
    option (gnostic.openapi.v3.operation) = {
      operation_id: "DatafeedService_ListSymbols"
      summary: "List Symbols"
      description: "Returns symbols in common LibrarySymbolInfo format for all symbol catalogs."
      tags: "UDF"
      tags: "Scanner"
      tags: "Datafeed"
    };
  }
}

enum SeriesFormat {
  SERIES_FORMAT_UNSPECIFIED = 0;
  SERIES_FORMAT_PRICE = 1;
  SERIES_FORMAT_VOLUME = 2;
}

enum VisiblePlotsSet {
  VISIBLE_PLOTS_SET_UNSPECIFIED = 0;
  VISIBLE_PLOTS_SET_OHLCV = 1;
  VISIBLE_PLOTS_SET_OHLC = 2;
  VISIBLE_PLOTS_SET_C = 3;
  VISIBLE_PLOTS_SET_HLC = 4;
}

enum DataStatus {
  DATA_STATUS_UNSPECIFIED = 0;
  DATA_STATUS_STREAMING = 1;
  DATA_STATUS_ENDOFDAY = 2;
  DATA_STATUS_DELAYED_STREAMING = 3;
}

enum SortOrder {
  SORT_ORDER_UNSPECIFIED = 0;
  SORT_ORDER_ASC = 1;
  SORT_ORDER_DESC = 2;
}

enum TimescaleMarkShape {
  TIMESCALE_MARK_SHAPE_UNSPECIFIED = 0;
  TIMESCALE_MARK_SHAPE_CIRCLE = 1;
  TIMESCALE_MARK_SHAPE_EARNING_UP = 2;
  TIMESCALE_MARK_SHAPE_EARNING_DOWN = 3;
  TIMESCALE_MARK_SHAPE_EARNING = 4;
}

message StringList {
  repeated string values = 1;
}

message StringListList {
  repeated StringList values = 1;
}

message DoubleList {
  repeated double values = 1;
}

message Int64List {
  repeated int64 values = 1;
}

message BoolList {
  repeated bool values = 1;
}

message NullableStringList {
  repeated google.protobuf.StringValue values = 1;
}

message NullableDoubleList {
  repeated google.protobuf.DoubleValue values = 1;
}

message NullableBoolList {
  repeated google.protobuf.BoolValue values = 1;
}

message StringOrStringList {
  oneof value {
    string single = 1;
    StringList many = 2;
  }
}

message StringListOrStringListList {
  oneof value {
    StringList single = 1;
    StringListList many = 2;
  }
}

message DoubleOrDoubleList {
  oneof value {
    double single = 1;
    DoubleList many = 2;
  }
}

message Int64OrInt64List {
  oneof value {
    int64 single = 1;
    Int64List many = 2;
  }
}

message BoolOrBoolList {
  oneof value {
    bool single = 1;
    BoolList many = 2;
  }
}

message StringOrNullableStringList {
  oneof value {
    string single = 1;
    NullableStringList many = 2;
  }
}

message DoubleOrNullableDoubleList {
  oneof value {
    double single = 1;
    NullableDoubleList many = 2;
  }
}

message BoolOrNullableBoolList {
  oneof value {
    bool single = 1;
    NullableBoolList many = 2;
  }
}

message VisiblePlotsSetList {
  repeated VisiblePlotsSet values = 1;
}

message VisiblePlotsSetOrList {
  oneof value {
    VisiblePlotsSet single = 1;
    VisiblePlotsSetList many = 2;
  }
}

message SymbolPriceSource {
  string id = 1 [(buf.validate.field).string.min_len = 1];
  string name = 2 [(buf.validate.field).string.min_len = 1];
}

message SubsessionInfo {
  string id = 1 [(buf.validate.field).string.min_len = 1];
  string description = 2 [(buf.validate.field).string.min_len = 1];
  string session = 3 [(buf.validate.field).string.min_len = 1];
  optional string session_correction = 4 [json_name = "session-correction"];
  optional string session_display = 5 [json_name = "session-display"];
}

message LibrarySymbolInfo {
  option (gnostic.openapi.v3.schema) = {
    title: "LibrarySymbolInfo"
    description: "Common symbol format used across UDF and scanner integrations."
  };

  string name = 1 [(buf.validate.field).string.min_len = 1];
  optional string ticker = 2 [(buf.validate.field).string.min_len = 1];
  string description = 3 [(buf.validate.field).string.min_len = 1];
  string type = 4 [(buf.validate.field).string.min_len = 1];
  string session = 5 [(buf.validate.field).string.min_len = 1];
  optional string session_holidays = 6;
  optional string session_display = 7;
  optional string corrections = 8;
  string timezone = 9 [(buf.validate.field).string.min_len = 1];
  string exchange = 10 [(buf.validate.field).string.min_len = 1];
  string listed_exchange = 11 [(buf.validate.field).string.min_len = 1];
  SeriesFormat format = 12;
  int32 minmov = 13 [(buf.validate.field).int32.gt = 0];
  int32 pricescale = 14 [(buf.validate.field).int32.gt = 0];
  optional int32 minmove2 = 15 [(buf.validate.field).int32.gte = 0];
  optional bool fractional = 16;
  optional string variable_tick_size = 17;
  optional bool has_intraday = 18;
  optional bool has_daily = 19;
  optional bool has_weekly_and_monthly = 20;
  optional bool has_seconds = 21;
  optional bool has_ticks = 22;
  optional bool has_empty_bars = 23;
  optional bool build_seconds_from_ticks = 24;
  repeated string supported_resolutions = 25 [
    (buf.validate.field).repeated.items = {
      string: {
        min_len: 1
      }
    }
  ];
  repeated string intraday_multipliers = 26;
  repeated string seconds_multipliers = 27;
  repeated string daily_multipliers = 28;
  repeated string weekly_multipliers = 29;
  repeated string monthly_multipliers = 30;
  optional int32 volume_precision = 31 [(buf.validate.field).int32.gte = 0];
  DataStatus data_status = 32;
  optional int32 delay = 33 [(buf.validate.field).int32.gte = 0];
  optional bool expired = 34;
  optional int64 expiration_date = 35 [(buf.validate.field).int64.gt = 0];
  optional string sector = 36;
  optional string industry = 37;
  optional string currency_code = 38;
  optional string original_currency_code = 39;
  optional string unit_id = 40;
  optional string original_unit_id = 41;
  repeated string unit_conversion_types = 42;
  VisiblePlotsSet visible_plots_set = 43;
  optional string exchange_logo = 44;
  repeated string logo_urls = 45 [
    (buf.validate.field).repeated = {
      min_items: 1
      max_items: 2
      items: {
        string: {
          min_len: 1
        }
      }
    }
  ];
  optional string long_description = 46;
  repeated string base_name = 47 [
    (buf.validate.field).repeated.items = {
      string: {
        min_len: 1
      }
    }
  ];
  repeated SymbolPriceSource price_sources = 48;
  optional string price_source_id = 49 [(buf.validate.field).string.min_len = 1];
  repeated SubsessionInfo subsessions = 50;
  optional string subsession_id = 51 [(buf.validate.field).string.min_len = 1];
  map<string, google.protobuf.Value> library_custom_fields = 52;
}

message ListSymbolsRequest {
  option (gnostic.openapi.v3.schema) = {
    title: "ListSymbolsRequest"
    description: "Query model for listing symbols in common LibrarySymbolInfo format."
  };

  optional string query = 1 [
    (buf.validate.field).string = {
      min_len: 1
      max_len: 256
    }
  ];
  optional string type = 2 [(buf.validate.field).string.min_len = 1];
  optional string exchange = 3 [(buf.validate.field).string.min_len = 1];
  optional uint32 limit = 4 [
    (buf.validate.field).uint32 = {
      gt: 0
      lte: 500
    }
  ];
  optional uint32 offset = 5 [(buf.validate.field).uint32.lte = 1000000];
  repeated string markets = 6 [
    (buf.validate.field).repeated = {
      max_items: 25
      items: {
        string: {
          min_len: 1
          max_len: 64
        }
      }
    }
  ];
  repeated string symbols = 7 [
    (buf.validate.field).repeated = {
      max_items: 1000
      items: {
        string: {
          min_len: 1
          max_len: 128
        }
      }
    }
  ];
  optional bool include_expired = 8;
  optional string sort_by = 9 [
    (buf.validate.field).string = {
      min_len: 1
      max_len: 64
    }
  ];
  SortOrder sort_order = 10;
}

message ListSymbolsResponse {
  option (gnostic.openapi.v3.schema) = {
    title: "ListSymbolsResponse"
    description: "Paged symbol list in common LibrarySymbolInfo format."
  };

  uint32 total_count = 1;
  repeated LibrarySymbolInfo symbols = 2;
}

message ExchangeDescriptor {
  string value = 1;
  string name = 2;
  string desc = 3;
}

message SymbolTypeDescriptor {
  string name = 1;
  string value = 2;
}

message CurrencyItem {
  string id = 1;
  string code = 2;
  optional string description = 3;
}

message CurrencyCodeEntry {
  oneof value {
    string code = 1;
    CurrencyItem item = 2;
  }
}

message UnitItem {
  string id = 1;
  string name = 2;
  string description = 3;
}

message UnitList {
  repeated UnitItem items = 1;
}

message GetConfigRequest {}

message GetConfigResponse {
  repeated string supported_resolutions = 1;
  reserved 2;
  optional bool supports_marks = 3;
  reserved 4;
  optional bool supports_timescale_marks = 5;
  optional bool supports_time = 6;
  repeated ExchangeDescriptor exchanges = 7;
  repeated SymbolTypeDescriptor symbols_types = 8;
  repeated CurrencyCodeEntry currency_codes = 9;
  map<string, UnitList> units = 10;
  map<string, string> symbols_grouping = 11;
}

message GetTimeRequest {}

message GetTimeResponse {
  int64 unix_time = 1;
}

message ChartBar {
  int64 time = 1;
  double open = 2;
  double high = 3;
  double low = 4;
  double close = 5;
  optional double volume = 6;
}

message GetBarsRequest {
  string symbol = 1 [(buf.validate.field).string.min_len = 1];
  int64 from = 2;
  int64 to = 3;
  string resolution = 4 [(buf.validate.field).string.min_len = 1];
  uint32 count_back = 5 [(buf.validate.field).uint32.gt = 0];
}

message GetBarsResponse {
  repeated ChartBar bars = 1;
  bool no_data = 2;
  optional int64 next_time = 3;
}

message GetHistoryRequest {
  string symbol = 1 [(buf.validate.field).string.min_len = 1];
  int64 from = 2;
  int64 to = 3;
  string resolution = 4 [(buf.validate.field).string.min_len = 1];
  uint32 countback = 5 [(buf.validate.field).uint32.gt = 0];
}

message GetHistoryOk {
  repeated int64 t = 1;
  repeated double c = 2;
  repeated double o = 3;
  repeated double h = 4;
  repeated double l = 5;
  repeated double v = 6;
}

message GetHistoryNoData {
  optional int64 next_time = 1;
}

message GetHistoryError {
  string errmsg = 1;
}

message GetHistoryResponse {
  oneof result {
    GetHistoryOk ok = 1;
    GetHistoryNoData no_data = 2;
    GetHistoryError error = 3;
  }
}

message QuoteValues {
  optional double ch = 1;
  optional double chp = 2;
  optional string short_name = 3;
  optional string exchange = 4;
  optional string description = 5;
  optional double lp = 6;
  optional double ask = 7;
  optional double bid = 8;
  optional double open_price = 9;
  optional double high_price = 10;
  optional double low_price = 11;
  optional double prev_close_price = 12;
  optional double volume = 13;
  optional string original_name = 14;
  optional double spread = 15;
  optional double rtc = 16;
  optional int64 rtc_time = 17;
  optional double rch = 18;
  optional double rchp = 19;
}

message QuoteData {
  string s = 1;
  string n = 2;
  optional QuoteValues v = 3;
}

message GetQuotesRequest {
  string symbols = 1 [(buf.validate.field).string.min_len = 1];
}

message GetQuotesOk {
  repeated QuoteData d = 1;
}

message GetQuotesError {
  string errmsg = 1;
}

message GetQuotesResponse {
  oneof result {
    GetQuotesOk ok = 1;
    GetQuotesError error = 2;
  }
}

message MarkId {
  oneof value {
    string string_id = 1;
    int64 numeric_id = 2;
  }
}

message GetMarksRequest {
  string symbol = 1 [(buf.validate.field).string.min_len = 1];
  int64 from = 2;
  int64 to = 3;
  string resolution = 4 [(buf.validate.field).string.min_len = 1];
}

message GetMarksResponse {
  repeated MarkId id = 1;
  Int64OrInt64List time = 2;
  StringOrStringList color = 3;
  StringOrStringList text = 4;
  StringOrStringList label = 5;
  StringOrStringList label_font_color = 6 [json_name = "labelFontColor"];
  DoubleOrDoubleList min_size = 7 [json_name = "minSize"];
  optional DoubleOrNullableDoubleList border_width = 8 [json_name = "borderWidth"];
  optional DoubleOrNullableDoubleList hovered_border_width = 9 [json_name = "hoveredBorderWidth"];
  optional StringOrNullableStringList image_url = 10 [json_name = "imageUrl"];
  optional BoolOrNullableBoolList show_label_when_image_loaded = 11 [json_name = "showLabelWhenImageLoaded"];
}

message TimescaleMark {
  MarkId id = 1;
  string color = 2;
  string label = 3;
  int64 time = 4;
  string tooltip = 5;
  optional TimescaleMarkShape shape = 6;
}

message GetTimescaleMarksRequest {
  string symbol = 1 [(buf.validate.field).string.min_len = 1];
  int64 from = 2;
  int64 to = 3;
  string resolution = 4 [(buf.validate.field).string.min_len = 1];
}

message GetTimescaleMarksResponse {
  repeated TimescaleMark marks = 1;
}

message ResolveSymbolRequest {
  string symbol = 1 [(buf.validate.field).string.min_len = 1];
  optional string currency_code = 2 [json_name = "currencyCode"];
  optional string unit_id = 3 [json_name = "unitId"];
  optional string session = 4;
}

message ResolveSymbolResponse {
  LibrarySymbolInfo symbol = 1;
}

message GetSymbolGroupInfoRequest {
  string group = 1 [(buf.validate.field).string.min_len = 1];
}

message GetSymbolGroupInfoResponse {
  repeated string symbol = 1;
  StringOrStringList description = 2;
  DoubleOrDoubleList minmov = 3;
  DoubleOrDoubleList pricescale = 4;
  StringOrStringList type = 5;
  StringOrStringList timezone = 6;
  optional StringOrStringList exchange_listed = 7 [json_name = "exchange-listed"];
  optional StringOrStringList exchange_traded = 8 [json_name = "exchange-traded"];
  optional DoubleOrDoubleList minmov2 = 9;
  optional BoolOrBoolList fractional = 10;
  optional BoolOrBoolList has_intraday = 11 [json_name = "has-intraday"];
  optional BoolOrBoolList has_daily = 12 [json_name = "has-daily"];
  optional BoolOrBoolList has_weekly_and_monthly = 13 [json_name = "has-weekly-and-monthly"];
  optional BoolOrBoolList has_empty_bars = 14 [json_name = "has-empty-bars"];
  optional VisiblePlotsSetOrList visible_plots_set = 15 [json_name = "visible-plots-set"];
  optional StringOrStringList ticker = 16;
  optional StringOrStringList session_regular = 17 [json_name = "session-regular"];
  optional StringOrStringList session_holidays = 18 [json_name = "session-holidays"];
  optional StringOrStringList corrections = 19;
  optional StringListOrStringListList supported_resolutions = 20 [json_name = "supported-resolutions"];
  optional BoolOrBoolList force_session_rebuild = 21 [json_name = "force-session-rebuild"];
  optional StringListOrStringListList intraday_multipliers = 22 [json_name = "intraday-multipliers"];
  optional DoubleOrDoubleList volume_precision = 23;
}

message SearchResultItem {
  string symbol = 1 [(buf.validate.field).string.min_len = 1];
  string description = 2 [(buf.validate.field).string.min_len = 1];
  string exchange = 3 [(buf.validate.field).string.min_len = 1];
  string type = 4 [(buf.validate.field).string.min_len = 1];
  optional string ticker = 5;
  optional string exchange_logo = 6;
  repeated string logo_urls = 7 [
    (buf.validate.field).repeated = {
      min_items: 1
      max_items: 2
      items: {
        string: {
          min_len: 1
        }
      }
    }
  ];
}

message SearchSymbolsRequest {
  string query = 1 [
    (buf.validate.field).string = {
      min_len: 1
      max_len: 256
    }
  ];
  optional string type = 2;
  optional string exchange = 3;
  optional uint32 limit = 4 [(buf.validate.field).uint32.gte = 1];
}

message SearchSymbolsResponse {
  repeated SearchResultItem items = 1;
}

message StreamBarsRequest {
  LibrarySymbolInfo symbol_info = 1;
  string resolution = 2 [(buf.validate.field).string.min_len = 1];
  string listener_guid = 3 [(buf.validate.field).string.min_len = 1];
}

message StreamBarsResponse {
  repeated int64 t = 1;
  repeated double c = 2;
  repeated double o = 3;
  repeated double h = 4;
  repeated double l = 5;
  repeated double v = 6;
}

message SubscribeBarsRequest {
  LibrarySymbolInfo symbol_info = 1;
  string resolution = 2 [(buf.validate.field).string.min_len = 1];
  string listener_guid = 3 [(buf.validate.field).string.min_len = 1];
}

message SubscribeBarsResponse {
  ChartBar bar = 1;
}

message Tick {
  string symbol = 1;
  int64 ts_ms = 2;
  double price = 3;
  double size = 4;
  string source = 5;
}

message IngestTicksRequest {
  repeated Tick ticks = 1;
}

message IngestTicksResponse {
  uint32 inserted = 1;
}

message ReplayTicksRequest {
  string symbol = 1;
  int64 start_ts_ms = 2;
  int64 end_ts_ms = 3;
  uint32 limit = 4;
}

message ReplayTicksResponse {
  repeated Tick ticks = 1;
}

message Bar {
  string symbol = 1;
  string interval = 2;
  int64 ts_ms = 3;
  double open = 4;
  double high = 5;
  double low = 6;
  double close = 7;
  double volume = 8;
}

message QueryBarsRequest {
  string symbol = 1;
  string interval = 2;
  int64 start_ts_ms = 3;
  int64 end_ts_ms = 4;
  uint32 limit = 5;
}

message QueryBarsResponse {
  repeated Bar bars = 1;
}

message ListNewsRequest {
  string symbol = 1;
  uint32 limit = 2;
}

message NewsEvent {
  string id = 1;
  string symbol = 2;
  string title = 3;
  string url = 4;
  int64 ts_ms = 5;
  string source = 6;
}

message ListNewsResponse {
  repeated NewsEvent items = 1;
}

message ListSocialRequest {
  string symbol = 1;
  uint32 limit = 2;
}

message SocialEvent {
  string id = 1;
  string symbol = 2;
  string platform = 3;
  string author = 4;
  string text = 5;
  int64 ts_ms = 6;
  double sentiment = 7;
}

message ListSocialResponse {
  repeated SocialEvent items = 1;
}
